Product management frontend completed